syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message SumRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 prime_number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 result = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    float result = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 maximum = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse) {
    };
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {
    };
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {
    };
    rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse) {
    };
}
